# typerspace-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.py  typerspace
.github/workflows/: release.yml  tests_and_checks.yml
src/: main.py  translator.py
src/api/: api.py  settings.py  translator.py  youtube.py  youtube_api.py
src/common/: settings.py  utils.py
src/db/: mongo_db.py
src/models/: caption.py  translator.py  video.py
src/tests/: conftest.py
src/tests/unit/: test_api.py
src/tests/unit/api/: test_api.py
src/tests/unit/endpoint/: test_endpoint.py
tests/unit/: test_captions.py
