[tool.poetry]
name = "typerspace-api"
version = "0.1.0"
description = ""
authors = ["MatthewDamiata <mdamiat1@binghamton.edu>"]
readme = "README.md"
packages = [{include = "typerspace_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
