[tool.poetry]
name = "typerspace-api"
version = "0.1.0"
description = ""
authors = ["MatthewDamiata <mdamiat1@binghamton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pytest = "^7.2.0"
youtube-transcript-api = "^0.5.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
